[package]
name = "daisycalc"
version = "0.2.5"
edition = "2021"
build = "buildscript/main.rs"
license-file = "LICENSE"
description = "A high-precision terminal scientific calculator."
repository = "https://git.betalupi.com/Mark/daisy"
homepage = "https://git.betalupi.com/Mark/daisy"
readme = "README.md"

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"


[dependencies]
cfg-if = "1.0.0"

[target.'cfg(target_family = "unix")'.dependencies]
termion = "2.0.1"
rug = "1.19.2"

[build-dependencies]
toml = "0.7.4"