[package]
name = "daisycalc"
version = "1.1.1"
edition = "2021"
build = "buildscript/main.rs"
license = "GPL-3.0-only"
description = "A high-precision terminal scientific calculator."
repository = "https://git.betalupi.com/Mark/daisy"
homepage = "https://git.betalupi.com/Mark/daisy"
readme = "README.md"

[[bin]]
name = "daisy"
path = "src/main.rs"

[lib]
name = "daisycalc"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = 0
debug-assertions = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"


[dependencies]
cfg-if = "1.0.0"
num = "0.4.1"
#astro-float = "0.7.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[target.'cfg(target_family = "unix")'.dependencies]
termion = "2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"


[build-dependencies]
toml = "0.7.4"